[gd_scene format=3 uid="uid://bb8l5daew2v2s"]

[ext_resource type="Script" uid="uid://djnxm2wax5sw4" path="res://main_ui_script.gd" id="1_svc0c"]

[node name="MainUI" type="CanvasLayer" unique_id=1676901408]
script = ExtResource("1_svc0c")

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=1914721537]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -151.0
offset_top = -91.0
offset_right = 151.0
offset_bottom = 91.0
grow_horizontal = 2
grow_vertical = 2

[node name="UsernameInput" type="LineEdit" parent="VBoxContainer" unique_id=1698734768]
layout_mode = 2
placeholder_text = "Enter Username"

[node name="TaskLengthInput" type="LineEdit" parent="VBoxContainer" unique_id=66821394]
layout_mode = 2
placeholder_text = "Enter Task Length"
virtual_keyboard_type = 2

[node name="TaskNameInput" type="LineEdit" parent="VBoxContainer" unique_id=1204280854]
layout_mode = 2
placeholder_text = "Enter Task Name"
virtual_keyboard_type = 2

[node name="CalculateButton" type="Button" parent="VBoxContainer" unique_id=361393583]
layout_mode = 2
text = "Calculate"

[node name="LevelLabel" type="Label" parent="VBoxContainer" unique_id=635707030]
layout_mode = 2

[node name="NextButton" type="Button" parent="VBoxContainer" unique_id=271489919]
visible = false
layout_mode = 2
text = "Next"

[node name="NewTaskButton" type="Button" parent="." unique_id=1210107233]
visible = false
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -31.0
offset_right = 83.0
grow_vertical = 0
size_flags_horizontal = 4
text = "New Task"

[node name="Username" type="Label" parent="." unique_id=1823366753]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -48.0
offset_right = 50.0
offset_bottom = -25.0
grow_vertical = 0
theme_override_font_sizes/font_size = 24

[connection signal="pressed" from="VBoxContainer/NextButton" to="." method="_on_next_button_pressed"]
[connection signal="pressed" from="NewTaskButton" to="." method="_on_new_task_button_pressed"]
